--- a/front/job-search/src/components/Navbar/Navbar.css
+++ b/front/job-search/src/components/Navbar/Navbar.css
@@ -1,26 +1,31 @@
 .NavbarItems {
   background: linear-gradient(
     90deg,
-    rgb(110, 94, 254) 0%,
+    rgb(110, 94, 254) 100%,
     rgba(73, 63, 252, 1) 100%
   );
+  z-index: 1;
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
+  position: fixed;
 }
 
 .navbar-logo {
   color: #fff;
   justify-self: start;
   margin-left: 20px;
+  padding-right: 200px;
   cursor: pointer;
 }
 
 .fa-rebel {
   margin-left: 0.5rem;
   font-size: 1.6rem;
+  position: absolute;
 }
 
 .nav-menu {
@@ -30,8 +35,9 @@
   list-style: none;
   text-align: center;
   width: 70vw;
+  margin-top: 5px;
   justify-content: end;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .nav-links {
@@ -57,6 +63,21 @@
   display: none;
 }
 
+/* Input */
+.mainTxt {
+}
+.search {
+  border-radius: 10px;
+  padding-left: 4px;
+  padding-right: 10px;
+}
+
+.search:hover {
+  cursor: pointer;
+  background-color: lightgray;
+  transition: 0.2s;
+}
+
 @media screen and (max-width: 1000px) {
   .NavbarItems {
     position: relative;
@@ -69,6 +90,7 @@
     position: absolute;
     top: 80px;
     left: -100%;
+
     opacity: 1;
     transition: all 0.5s ease;
   }
