--- a/front/job-search/src/pages/Home.css
+++ b/front/job-search/src/pages/Home.css
@@ -1,10 +1,17 @@
 .mainTxt {
   height: 50px;
   font-size: 30pt;
-  width: 400px;
+  width: 500px;
+  border-radius: 10px;
 }
 .search {
   height: 50px;
   width: 50px;
   font-size: 20pt;
+}
+
+.search:hover {
+  cursor: pointer;
+  background-color: lightgray;
+  transition: 0.2s;
 }
